--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URI=mongodb://localhost:27017/stackit
 JWT_SECRET=v@n$hi$m@k!ngth3w3b$!t3
 PORT=5000
 FRONTEND_URL=http://localhost:3000
+REACT_APP_API_URL=http://localhost:5000/api
